Update backend and frontend: KYC, onchain services, community, item store, and wallet utilities

--- a/frontend/env.local.example
+++ b/frontend/env.local.example
@@ -1,4 +1,9 @@
 NEXT_PUBLIC_API_BASE_URL=https://insectarium-public-api.memex.xyz
 NEXT_PUBLIC_BACKEND_API_URL=http://localhost:4000
 
+# Smart Contract Addresses
+NEXT_PUBLIC_DID_REGISTRY_ADDRESS=0x526764626f9b83B5A2FcDac5Dbd921E3b7d24E21
+NEXT_PUBLIC_ITEM_PAYMENT_ADDRESS=0x91B6Ff86A7f065343BcCdfFf3cDE193443C9F9f2
+NEXT_PUBLIC_TOKEN_CONTRACT_ADDRESS=0x91B6Ff86A7f065343BcCdfFf3cDE193443C9F9f2
+
 
