fix: add onchain functions

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,16 @@
+# Server Configuration
 PORT=4000
-MONGODB_URI=mongodb://localhost:27017/idateu
-ISSUER_ADDRESS=0x0000000000000000000000000000000000000000
 
+# MongoDB
+MONGODB_URI=mongodb://localhost:27017/idateu
+
+# Blockchain Configuration - Formicarium Testnet
+RPC_URL=https://rpc.formicarium.memecore.net
+CHAIN_ID=43521
+
+# Contract Addresses (Formicarium Testnet)
+DID_REGISTRY_ADDRESS=0x526764626f9b83B5A2FcDac5Dbd921E3b7d24E21
+ITEM_PAYMENT_ADDRESS=0x91B6Ff86A7f065343BcCdfFf3cDE193443C9F9f2
+
+# Issuer Private Key 
+ISSUER_PRIVATE_KEY=여기에_issuer_개인키_입력
